# stream_processor

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
.github/workflows/: autoformat.yml
scripts/: sync_node
src/spectral_correct/: bindings.cpp  process.cpp  process.hpp
stream_processor/: dbConnector.py  stream_processor.py  utilities.py
stream_processor/spectral_correct/: __init__.py
test/: test_db_writer_threading.py  test_publish_mode.py  test_spectral_correction.py
