<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stream_processor</name>
  <version>0.1.0</version>
  <description>PPS-synced sync node + in-process C++ split/spectral-correction extension.</description>
  <maintainer email="mwmaster@ucsc.edu">mwmaster</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>pybind11_vendor</depend>
  <depend>OpenCV</depend>
  <depend>python3-numpy</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
